--- a/NEKit-iOS/Info.plist
+++ b/NEKit-iOS/Info.plist
@@ -20,6 +20,13 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionMinimumTLSVersion</key>
+   	<string>TLSv1.0</string>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
